5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1758_1580.log
== SUBMITION (2019-05-29 21:16:57) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
	elif(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
	elif(nota[i] < 6 and notas[i] != -1):
		reprov = reprov + 1
		medpres = medpres + 1
	elif(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medipres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round(media), 2)
print(maior_nota)
	

-- EXECUTION TIME:
0.522762
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 18, in <module>
    elif(nota[i] < 6 and notas[i] != -1):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:17:07) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
	elif(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
	elif(nota[i] < 6 and notas[i] != -1):
		reprov = reprov + 1
		medpres = medpres + 1
	elif(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medipres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round(media),2)
print(maior_nota)
	

-- EXECUTION TIME:
0.533672
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 18, in <module>
    elif(nota[i] < 6 and notas[i] != -1):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:18:40) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
	elif(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
	elif(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + 1
	elif(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medipres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round(media),2)
print(maior_nota)
	

-- EXECUTION TIME:
0.498208
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 18, in <module>
    elif(nota[i] < 6 and notas[i] >= 0):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:18:43) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
	elif(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
	elif(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + 1
	elif(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medipres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round(media),2)
print(maior_nota)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:18:53) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
	elif(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
	elif(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + 1
	elif(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medipres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round(media),2)
print(maior_nota)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:18:54) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
	elif(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
	elif(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + 1
	elif(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medipres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round(media),2)
print(maior_nota)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:18:54) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
	elif(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
	elif(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + 1
	elif(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medipres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round(media),2)
print(maior_nota)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:18:54) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
	elif(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
	elif(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + 1
	elif(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medipres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round(media),2)
print(maior_nota)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:18:54) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
	elif(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
	elif(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + 1
	elif(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medipres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round(media),2)
print(maior_nota)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:18:57) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
	elif(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
	elif(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + 1
	elif(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medipres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round(media),2)
print(maior_nota)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:20:01) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + 1
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medipres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round(media),2)
print(maior_nota)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:20:06) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + 1
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medipres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round(media),2)
print(maior_nota)
	

-- EXECUTION TIME:
0.500113
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 24, in <module>
    if(notas[i] == max(notas)):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:20:24) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + 1
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round(media),2)
print(maior_nota)
	

-- EXECUTION TIME:
0.405047
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 24, in <module>
    if(notas[i] == max(notas)):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:20:29) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + 1
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round(media),2)
print(maior_nota)
	

-- EXECUTION TIME:
0.468453
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 24, in <module>
    if(notas[i] == max(notas)):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:20:32) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + 1
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round(media),2)
print(maior_nota)
	

-- EXECUTION TIME:
0.394252
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 24, in <module>
    if(notas[i] == max(notas)):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:21:15) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + 1
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- EXECUTION TIME:
0.440846
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 24, in <module>
    if(notas[i] == max(notas)):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:21:18) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + 1
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:21:21) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + 1
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- EXECUTION TIME:
0.351341
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 24, in <module>
    if(notas[i] == max(notas)):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:24:22) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + nota[i]
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- EXECUTION TIME:
0.441926
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 24, in <module>
    if(notas[i] == max(notas)):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:24:25) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + nota[i]
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- EXECUTION TIME:
0.535948
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 24, in <module>
    if(notas[i] == max(notas)):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:25:37) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + nota[i]
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- EXECUTION TIME:
0.512745
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 24, in <module>
    if(notas[i] == max(notas)):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:25:39) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + nota[i]
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- EXECUTION TIME:
0.303151
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 24, in <module>
    if(notas[i] == max(notas)):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:25:39) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + nota[i]
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:27:37) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + nota[i]
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- EXECUTION TIME:
0.444933
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 24, in <module>
    if(notas[i] == max(notas)):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:28:21) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + nota[i]
		
	if(notas[i] == max(nota)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- EXECUTION TIME:
0.521938
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 24, in <module>
    if(notas[i] == max(nota)):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:28:23) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + nota[i]
		
	if(notas[i] == max(nota)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:28:27) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and notas[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + nota[i]
		
	if(notas[i] == max(nota)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- EXECUTION TIME:
0.329349
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 24, in <module>
    if(notas[i] == max(nota)):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:30:01) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and nota[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + nota[i]
		
	if(notas[i] == max(nota)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- EXECUTION TIME:
0.344659
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 24, in <module>
    if(notas[i] == max(nota)):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:30:05) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and nota[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + nota[i]
		
	if(notas[i] == max(nota)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- EXECUTION TIME:
0.407513
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 24, in <module>
    if(notas[i] == max(nota)):
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:30:17) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and nota[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] == max(nota)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- EXECUTION TIME:
0.412103
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 25, in <module>
    maior_nota = alunos[i]
NameError: name 'alunos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:30:20) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and nota[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] == max(nota)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprovados + aprovados
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- EXECUTION TIME:
0.529738
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 25, in <module>
    maior_nota = alunos[i]
NameError: name 'alunos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:31:07) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and nota[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] == max(nota)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprov + aprov
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- EXECUTION TIME:
0.371938
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 25, in <module>
    maior_nota = alunos[i]
NameError: name 'alunos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:31:20) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and nota[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] == max(nota)):
		maior_nota = alunos[i]
	i = i + 1

alunosp = reprov + aprov
media = medpres/alunosp

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- EXECUTION TIME:
0.419303
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 25, in <module>
    maior_nota = alunos[i]
NameError: name 'alunos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:33:48) 
-- CODE:
from numpy import *
nota = array(eval(input("notas: ")))
aluno = array(eval(input("alunos: ")))

aprov = 0
faltaram = 0
reprov = 0
presentes = 0
medpres = 0
i = 0

while(i < size(nota)):
	if(nota[i] == -1):
		faltaram = faltaram + 1
		
	if(nota[i] >= 6 and nota[i] <= 10):
		aprov = aprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] < 6 and nota[i] >= 0):
		reprov = reprov + 1
		medpres = medpres + nota[i]
		
	if(nota[i] == max(nota)):
		maior_nota = aluno[i]
	i = i + 1

alunop = reprov + aprov
media = medpres/alunop

print(faltaram)
print(aprov)
print(reprov)
print(round((media),2))
print(maior_nota)
	

-- EXECUTION TIME:
0.591596
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
